add transac list

--- a/client/src/core/Transactions/NewTransactions/NewTransactions.html
+++ b/client/src/core/Transactions/NewTransactions/NewTransactions.html
@@ -1,5 +1,5 @@
 <md-content layout="column" flex class="md-padding" >
-    <h1>new transactions need to be resolve</h1>
+    <!-- <h1>new transactions need to be resolve</h1> -->
     <div class="" layout="column" flex="none" ng-show="$ctrl.credits">
         <h3>new credits packages</h3>
         <md-card class="md-padding" layout="row" flex ng-repeat="item in $ctrl.credits" layout-align="space-between center">
