--- a/client/src/core/Transactions/Transactions.html
+++ b/client/src/core/Transactions/Transactions.html
@@ -1,3 +1,15 @@
+<div class="md-padding" layout="row" flex="none">
+    <h3>Transactions</h3>
+    <div class="" flex>
+
+    </div>
+    <md-button ng-click="$ctrl.$state.go('core.transactions.new')">
+        New Unsolved
+    </md-button>
+    <md-button ng-click="$ctrl.$state.go('core.transactions.list')">
+        All
+    </md-button>
+</div>
 <div ui-view layout="column" flex>
     Loading...
 </div>
