--- a/client/src/core/inhouseOrders/inhouseOrdersDialog.html
+++ b/client/src/core/inhouseOrders/inhouseOrdersDialog.html
@@ -6,35 +6,92 @@
             <md-icon md-svg-src="close" ng-click="$ctrl.cancel()"></md-icon>
         </div>
     </md-toolbar>
-    <md-content layout="column" flex layout-fill>
-        <div class="" layout="row" layout-align="center center" flex="none" ng-show="$ctrl.order_id">
-            <md-checkbox
-                ng-true-value="true"
-                ng-false-value="false"
-                ng-model="$ctrl.order.isRush"
-                ng-change="$ctrl.updateOrder()" aria-label="Checkbox 1">
-                <h5>Rush?</h5>
-            </md-checkbox>
-        </div>
-        <div class="padding-box"
-            ng-show="type.type!='time'"
-            ng-repeat="type in $ctrl.list | orderBy: 'type'" layout="column" layout-align="start center" flex="none">
-            <h3>
-                {{type.zhName}} {{type.name}}
-            </h3>
-            <div class="button-container">
-                <md-button
-                    class="click-button"
-                    ng-repeat="item in type.subItems"
-                    ng-show="!item.isDeleted && item.isActivated"
-                    ng-click="$ctrl.assignToOrder(type.name, item)"
-                    ng-class="{
-                        'md-accent': $ctrl.isInOrder(type.name, item),
-                        'md-raised': $ctrl.isInOrder(type.name, item)
-                    }">
-                    {{item.zhName}} {{item.name}}
-                </md-button>
-            </div>
+    <md-content layout="column" flex>
+        <div class="" layout="row" flex>
+            <md-content layout="column" flex="35">
+                <div class="md-padding" layout="column" flex="none">
+                    <div class="preview" layout="column" layout-align="center center">
+                        <div class=""
+                            ng-show="!$ctrl.selectedPreviouseOrderPictures || $ctrl.selectedPreviouseOrderPictures.length===0">
+                            Picture Preview
+                        </div>
+                        <img
+                            ng-hide="$ctrl.selectedPreviouseOrderPictures.length===0"
+                            ng-src="{{$ctrl.selectedPreviouseOrderPictures[$ctrl.previewIndex]}}"
+                            alt="" />
+                    </div>
+                    <div class="control" layout="row" flex="none" layout-align="center center" ng-show="!$ctrl.selectedPreviouseOrderPictures || $ctrl.selectedPreviouseOrderPictures.length===0">
+
+                    </div>
+                    <div class="control" layout="row" flex="none" layout-align="center center" ng-hide="!$ctrl.selectedPreviouseOrderPictures || $ctrl.selectedPreviouseOrderPictures.length===0">
+                        <md-button ng-click="$ctrl.changePreview(-1)"> < </md-button>
+                        <div class="" flex layout="row" layout-align="center center">
+                            {{$ctrl.previewIndex + 1 }} / {{$ctrl.selectedPreviouseOrderPictures.length}}
+                        </div>
+                        <md-button ng-click="$ctrl.changePreview(1)"> > </md-button>
+                        <!-- <md-icon md-svg-src="arrow-left-box"></md-icon>
+                        <md-icon md-svg-src="arrow-right-box" ng-click="$ctrl.changePreview(1)"></md-icon> -->
+                    </div>
+                </div>
+                <md-content class="md-padding" layout="column" flex>
+                    <!-- <md-button
+                        layout="row" layout-align="center center"
+                        class="md-primary"
+                        ng-class="{
+                            'md-raised': !$ctrl.selectedPreviouseOrder
+                        }"
+                        ng-click="$ctrl.applyPreviousOrder()">
+                        <div class="">
+                            new
+                        </div>
+                    </md-button> -->
+                    <md-button
+                        layout="row" layout-align="center center"
+                        flex="none"
+                        class="md-primary"
+                        ng-class="{
+                            'md-raised': $ctrl.selectedPreviouseOrder._id == previousOrder._id
+                        }"
+                        ng-click="$ctrl.applyPreviousOrder(previousOrder)"
+                        ng-repeat="previousOrder in $ctrl.previousOrders | orderBy:'scheduleAt':true">
+                        <div class="" flex="none">
+                            {{previousOrder.scheduleAt | date:'MM/dd/yyyy'}}
+                            <span ng-show="previousOrder._id==$ctrl.order._id">(current)</span>
+                        </div>
+                    </md-button>
+                </md-content>
+            </md-content>
+            <md-content class="" layout="column" flex>
+                <div class="rush" layout="row" layout-align="center center" flex="none" ng-show="$ctrl.order_id">
+                    <md-checkbox
+                        ng-true-value="true"
+                        ng-false-value="false"
+                        ng-model="$ctrl.order.isRush"
+                        ng-change="$ctrl.updateOrder()" aria-label="Checkbox 1">
+                        <h5>Is this a Rush order?</h5>
+                    </md-checkbox>
+                </div>
+                <div class="padding-box"
+                    ng-show="type.type!='time'"
+                    ng-repeat="type in $ctrl.list | orderBy: 'type'" layout="column" layout-align="start center" flex="none">
+                    <h3>
+                        {{type.zhName}} {{type.name}}
+                    </h3>
+                    <div class="button-container">
+                        <md-button
+                            class="click-button"
+                            ng-repeat="item in type.subItems"
+                            ng-show="!item.isDeleted && item.isActivated"
+                            ng-click="$ctrl.assignToOrder(type.keyID, item)"
+                            ng-class="{
+                                'md-accent': $ctrl.isInOrder(type.keyID, item),
+                                'md-raised': $ctrl.isInOrder(type.keyID, item)
+                            }">
+                            {{item.zhName}} {{item.name}}
+                        </md-button>
+                    </div>
+                </div>
+            </md-content>
         </div>
     </md-content>
     <md-divider></md-divider>
