--- a/client/src/core/customers/Transactions/Transactions.html
+++ b/client/src/core/customers/Transactions/Transactions.html
@@ -1,1 +1,28 @@
-<h1>transactions</h1>
+<h3>Transactions</h3>
+<!-- <div class="" layout="column" flex layout-align="start center">
+</div> -->
+<div
+    class="md-padding" layout="row" flex
+    ng-repeat="transaction in $ctrl.transactions | orderBy:'createdAt':true"
+    >
+    <div class="" flex="10">
+        {{$index+1}}
+    </div>
+    <div class="" flex="20">
+        {{transaction.createdAt | date:'MM/dd/yyyy'}}
+    </div>
+    <div class="" flex="10">
+        <span ng-show="transaction.credit_id">Credit</span>
+        <span ng-show="transaction.selfService_id">Self Service</span>
+        <span ng-show="transaction.order_id">Order</span>
+    </div>
+    <div class="" flex="20">
+        {{transaction.total | currency}}
+    </div>
+    <div class="" flex="20">
+        {{transaction.paymentTransactionsNumber}}
+    </div>
+    <div class="" flex="20">
+        {{transaction.note}}
+    </div>
+</div>
