#18 print receipt for using credits.

--- a/client/src/client/selfServiceForm/selfServiceForm.html
+++ b/client/src/client/selfServiceForm/selfServiceForm.html
@@ -84,7 +84,7 @@
                         $ctrl.data.balance > 0 ||
                         $ctrl.data.credit < $ctrl.getTotal()
                     "
-                    class="md-primary md-raised md-padding" ng-click="$ctrl.purchaseWithCredits()">
+                    class="md-primary md-raised md-padding" ng-click="$ctrl.purchase('withCredits')">
                     Pay with My Credits
                 </md-button>
                 <md-button
