#27 add edit credits and selfservie

--- a/client/src/core/oldCustomerPanel.dialog.html
+++ b/client/src/core/oldCustomerPanel.dialog.html
@@ -24,6 +24,9 @@
             <md-button ng-click="$ctrl.selectAndConfirm('info')"  class="md-accent md-raised">
                 Info
             </md-button>
+            <md-button ng-click="$ctrl.selectAndConfirm('credits')"  class="md-accent md-raised">
+                Credits
+            </md-button>
         </div>
 
         <md-divider></md-divider>
