--- a/client/src/core/Transactions/NewTransactions/NewTransactions.html
+++ b/client/src/core/Transactions/NewTransactions/NewTransactions.html
@@ -1,32 +1,34 @@
 <md-content layout="column" flex class="md-padding">
     <!-- <h1>new transactions need to be resolve</h1> -->
-    <div class="" layout="column" flex="none" ng-show="$ctrl.credits">
-        <h3>new credits packages</h3>
+    <div class="self-services" layout="column" flex="none" ng-show="$ctrl.credits.length>0">
+        <h3>New Credits Purchase 點數購買（新）</h3>
         <md-card class="md-padding" layout="row" flex ng-repeat="item in $ctrl.credits" layout-align="space-between center">
-            <div class="">
-                {{item.customers[0].phone | tel }}
+            <div class="" flex="30" layout="column">
+                <div class="">
+                    {{item.customers[0].phone | tel }}
+                </div>
+                <div class="">
+                    {{item.customers[0].firstname}}
+                    {{item.customers[0].lastname}}
+                </div>
             </div>
-            <div class="">
-                {{item.customers[0].firstname}}
-                {{item.customers[0].lastname}}
-            </div>
-            <div class="">
+            <div class="" flex layout="row" layout-align="center center">
                 {{item.balance | currency}}
             </div>
             <div class="">
-                <md-button class="md-primary" ng-click="$ctrl.cancel(item, 'credit')">
+                <md-button class="md-warn" ng-click="$ctrl.cancelUnpaid(item)">
                     cancel
                 </md-button>
             </div>
             <div class="">
-                <md-button class="md-primary" ng-click="$ctrl.pay(item, 'credit')">
+                <md-button class="md-primary md-raised" ng-click="$ctrl.pay(item, 'credit')">
                     pay
                 </md-button>
             </div>
         </md-card>
     </div>
-    <div class="self-services" layout="column" flex="none" ng-show="$ctrl.selfServices">
-        <h3>new self services</h3>
+    <div class="self-services" layout="column" flex="none" ng-show="$ctrl.selfServices.length>0">
+        <h3>New Self Services 自助服務（新）</h3>
         <md-card class="md-padding md-whiteframe-3dp" layout="column" flex ng-repeat="item in $ctrl.selfServices">
             <div class="" layout="row" flex layout-align="start center">
                 <div class="" flex="30">
@@ -40,11 +42,11 @@
                         cancel
                     </md-button>
                 </div>
-                <div class="">
+                <!-- <div class="">
                     <md-button class="md-warn" ng-click="$ctrl.cancel(item, 'selfService')">
                         edit
                     </md-button>
-                </div>
+                </div> -->
                 <div class="">
                     <md-button class="md-primary md-raised" ng-click="$ctrl.pay(item, 'selfService')">
                         pay
@@ -75,7 +77,6 @@
                                 </md-option>
                             </md-select>
                         </md-input-container>
-
                     </div>
                 </div>
                 <div class="" layout="column" flex="35">
