#20 add preview for signed waivers.

--- a/client/src/core/signatures/showSignaturesDialog.html
+++ b/client/src/core/signatures/showSignaturesDialog.html
@@ -1,22 +1,41 @@
 <md-toolbar layout="row" layout-align="start center" class="md-padding header md-hue-2">
     <h3>Ask your customer to sign?</h3>
-</md-toolbar>
-<md-content layout="column" flex class="md-padding">
-    <div layout="row" ng-repeat="waiver in $ctrl.waivers" ng-show="waiver.isActivated" layout-align="start center" flex="none">
-        <div class="">
-            {{waiver.name}}
-            {{waiver.zhName}}
-        </div>
-        <div class="" flex></div>
-        <md-button ng-click="$ctrl.askToSign(waiver.name)" ng-disabled="$ctrl.isSigned(waiver.name)">
-            <span ng-show="!$ctrl.isSigned(waiver.name)">
-                ask to sign
-            </span>
-            <span ng-show="$ctrl.isSigned(waiver.name)">
-                signed
-            </span>
-        </md-button>
+    <div class="" flex>
+
     </div>
+    <div class="">
+        <md-icon ng-click="$ctrl.cancel()" md-svg-src="close"></md-icon>
+    </div>
+</md-toolbar>
+<md-content layout="row" flex class="">
+    <div class="md-padding" layout="column" flex="40">
+        <div layout="row" ng-repeat="waiver in $ctrl.waivers" ng-show="waiver.isActivated" layout-align="start center" flex="none">
+            <div class="">
+                {{waiver.name}}
+                {{waiver.zhName}}
+            </div>
+            <div class="" flex></div>
+            <md-button ng-click="$ctrl.askToSign(waiver.name)" ng-disabled="$ctrl.isSigned(waiver.name)">
+                <span ng-show="!$ctrl.isSigned(waiver.name)">
+                    ask to sign
+                </span>
+                <span ng-show="$ctrl.isSigned(waiver.name)">
+                    signed
+                </span>
+            </md-button>
+            <md-button ng-click="$ctrl.view(waiver.name)" ng-disabled="!$ctrl.isSigned(waiver.name)">
+                <span ng-show="!$ctrl.isSigned(waiver.name)">
+                    -
+                </span>
+                <span ng-show="$ctrl.isSigned(waiver.name)">
+                    View
+                </span>
+            </md-button>
+        </div>
+    </div>
+    <md-content layout="column" flex>
+        <waiver-display customer-id="$ctrl.customer_id" order-id="$ctrl.order_id" waiver-name="$ctrl.waiverName" layout="column" flex></waiver-display>
+    </md-content>
 </md-content>
 <md-divider></md-divider>
 <div layout="row" layout-align="start center" flex="none">
