#20 add waiver preview to customer dialog git push

--- a/client/src/core/customers/customerDetailDialog.html
+++ b/client/src/core/customers/customerDetailDialog.html
@@ -44,6 +44,12 @@
                 <customer-credits customer-id="$ctrl.customer._id" layout="column" flex></customer-credits>
             </md-content>
           </md-tab>
+          <md-tab label="waivers">
+            <md-content class="md-padding">
+                <customer-waivers customer-id="$ctrl.customer._id" layout="column" flex></customer-waivers>
+            </md-content>
+          </md-tab>
+
           <!-- <md-tab label="history">
             <md-content class="md-padding">
               <h1 class="md-display-2">history</h1>
